# fixi

./: .gitignore  LICENSE  README.md  environment.yml  meson.build  pyproject.toml
.github/workflows/: ci.yml  cibuildwheel.yml
include/fixi/: backend.hpp  buckets.hpp  defines.hpp  rattle.hpp  utils.hpp
pyfixi/: __init__.py  constraints.py
python_bindings/: bindings.cpp
src/: main.cpp
tests/: test_buckets.cpp  test_dimer.cpp  test_water.cpp
tests_python/: conftest.py  test.py  test_constraint_forces.py  test_water.py
tests_python/resources/: system.xyz
tools/wheels/: cibw_setup.sh
